--- a/Unidad_2/bucles12.html
+++ b/Unidad_2/bucles12.html
@@ -8,10 +8,12 @@
     <title>Prestamo a la francesa</title>
     <style>
         #presta {
-            text-align:right;
+            text-align: right;
             font-weight: bold;
         }
-        th,td {
+
+        th,
+        td {
             text-align: right;
         }
     </style>
@@ -28,21 +30,23 @@
         var amortizado;
         var intereses;
 
-        var tabla = '<table border="1"><tr><td>Año</td><td>Cuota</td><td>Intereses</td><td>Amort.</td><td>Cap.Pend.</td></tr><tr><td>' + ano + '</td><td></td><td></td><td></td><td id="presta">' + prestamo + '</td></tr>';
+        var tabla =
+            '<table border="1"><tr><td>Año</td><td>Cuota</td><td>Intereses</td><td>Amort.</td><td>Cap.Pend.</td></tr><tr><td>' +
+            ano + '</td><td></td><td></td><td></td><td id="presta">' + prestamo + '</td></tr>';
 
         for (let i = duracion; i >= 1; i--) {
             cuota = (prestamo * interes) / (1 - Math.pow((1 + interes), -(i)));
             amortizado = cuota - (interes * prestamo);
             intereses = cuota - amortizado;
             prestamo = prestamo - cuota + intereses;
-            ano+=1;
-            
+            ano += 1;
+
             tabla += '<tr><td>' + ano + '</td>';
             tabla += '<td>' + cuota.toFixed(2) + '</td>';
             tabla += '<td>' + intereses.toFixed(2) + '</td>';
             tabla += '<td>' + amortizado.toFixed(2) + '</td>';
             tabla += '<td>' + prestamo.toFixed(2) + '</td>';
-            tabla += '</<td>';
+            tabla += '</tr>';
         }
 
         tabla += '</table>';
