--- a/Unidad_4/GaleriaImg/index.html
+++ b/Unidad_4/GaleriaImg/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <h1>Galería rudimentaria de Imágenes</h1>
-    <img src="" id="img"></img>
+    <img src="Img/ourense5.jpg" id="img" style="width:750px;height:400px;">
 </body>
 </html>
