--- a/Unidad_7/index.html
+++ b/Unidad_7/index.html
@@ -22,7 +22,7 @@
 
 
     <input type="button" value="Añadir nuevo socio socio" id="" onclick="crearSocio()">
-    <input type="button" value="Listar socios" id="" onclick="listarSocios(0)">
+    <input type="button" value="Listar socios" id="" onclick="muestraSociosTabla()">
     <input type="button" value="Listar socios por localidad" id="" onclick="listarSocios(1)">
     <input type="button" value="Listar por DNI" id="" onclick="listarPorDNI()">
     <hr>
